--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,6 @@ body {
     background: linear-gradient(180deg, rgba(236, 178, 46, 0.33) -4.71%, rgba(255, 255, 255, 0.33) 4.86%);
 }
 main {
-    position: relative;
-    display: flex;
-    flex-direction: column;
 }
 /* .overlay{
     position: fixed;
@@ -25,24 +22,28 @@ main {
 }
 .header__row {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-direction: row;
     align-items: center;
-    padding: 14.6042px 97.3611px;
-    gap: 150px;
+    padding: 1.2% 8.5%;
+    width: 100%;
+}
+.header__logo {
+    display: flex;
+    position: relative;
 }
 .header__list {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 0px;
     list-style: none;
-    gap: 40px;
+    display: flex;
+    position: relative;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
 }
-
 .header__hire {
     display: flex;
+    position: relative;
     align-items: center;
     justify-content: center;
     padding: 9.73611px;
@@ -77,7 +78,7 @@ main {
     display: flex;
     flex-direction: column;
     gap: 100px;
-    padding: 134px 94px 40px 94px;
+    padding: 134px 94px 50px 94px;
 }
 .home {
     position: relative;
@@ -153,8 +154,8 @@ main {
 }
 .mouse {
     position: relative;
-    width: 530.25px;
-    height: 353.5px;
+    width: 45%;
+    height: 45%;
 }
 .abouttext {
     position: relative;
@@ -314,7 +315,7 @@ main {
     color: rgba(0, 0, 0, 0.5);
     text-decoration: none;
 }
-input {
+/* input {
     display: flex;
     width: 510px;
     height: 75px;
@@ -322,8 +323,8 @@ input {
     border: 1.94722px solid rgba(0, 0, 0, 0.5);
     border-radius: 9.73611px;
     padding: 10px;
-}
-textarea {
+} */
+/* textarea {
     display: inline-block;
     align-items: center;
     justify-content: center;
@@ -334,7 +335,7 @@ textarea {
     border-radius: 9.73611px;
     font-family: 'Poppins', sans-serif;
     padding: 10px;
-}
+} */
 .contact{
     display: flex;
     flex-direction: column;
@@ -358,6 +359,7 @@ button:active {
     border-color: gray;
 }
 .footerfooter{
+    display: flex;
     position: absolute;
     background: #FCC028;
     width: 100%;
@@ -365,14 +367,15 @@ button:active {
     bottom: 0;
 }
 .captain {
+    display: flex;
     position: relative;
-    width: 100%;
-    height: 100%;
     z-index: 1;
 }
 .captain img {
-    width: 405px;
-    height: 420px;
+    display: flex;
+    position: relative;
+    width: 202.5px;
+    height: 210px;
 }
 footer {
     position: relative;
@@ -382,11 +385,18 @@ footer {
 .footer {
     position: relative;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: start;
     flex-direction: row;
-    padding-top: 97px;
-    gap: 30px;
+    padding-bottom: 5%;
+    gap: 5%;
+}
+.footerwithpic{
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding-top: 10%;
 }
 .socials { 
     background-color: #fff;
@@ -426,8 +436,8 @@ footer {
 .whiteblock {position: absolute;
     width: 620px;
     height: 140px;
-    left: 465.39px;
-    top: 252.17px;
+    left: 30%;
+    top: 50%;
     background: #FFFFFF;
     box-shadow: 0px 3.89444px 19.4722px rgba(19, 23, 61, 0.1);
     border-radius: 18.8995px;
@@ -468,6 +478,7 @@ footer {
 }
 .address {
     display: flex;
+    position: relative;
     flex-direction: column;
     align-items: flex-start;
     padding: 0px;
@@ -495,12 +506,21 @@ footer {
     color: rgba(0, 0, 0, 0.31);
 }
 .byme {
+    display: flex;
+    flex-direction: column;
     position: relative;
-    width: 280px;
+    width: fit-content;
 }
 .byme p{
     font-weight: 400;
     font-size: 11.6833px;
     line-height: 18px;
     color: rgba(0, 0, 0, 0.5);
+    width: fit-content;
+}
+.byme img{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    width: 30%;
 }
